[package]
name = "drown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.22", features = ["derive"] }
url = "2.4.0"
drown-common = { path = "../drown-common" }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
futures = "0.3.28"
bytes = { version = "1.4.0", features = ["serde"] }
thiserror = "1.0.47"
